--- a/task1.3.ipynb
+++ b/task1.3.ipynb
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Welcome to Python Programming!')"
+    "print('Hello!')"
    ]
   },
   {
@@ -64,7 +72,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The job was done. **hello** **hell**o *hello* ***hello***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 + 3"
+   ]
   },
   {
    "cell_type": "markdown",
