--- a/task1.4.ipynb
+++ b/task1.4.ipynb
@@ -38,10 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 5\n",
+    "while i < 16:\n",
+    "    print(i)\n",
+    "    i = i + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +90,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n",
+      "121\n",
+      "144\n",
+      "169\n",
+      "196\n",
+      "225\n",
+      "256\n",
+      "289\n",
+      "324\n",
+      "361\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 21:\n",
+    "    print(i**2)\n",
+    "i = i + 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
