--- a/task1.4.ipynb
+++ b/task1.4.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -124,11 +124,12 @@
     "i = 1\n",
     "while i < 21:\n",
     "    print(i**2)\n",
-    "i = i + 1\n",
+    "    i = i + 1\n",
     "\n",
     "\n",
     "\n",
     "\n",
+    "??\n",
     "\n",
     " "
    ]
@@ -142,10 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "16\n",
+      "36\n",
+      "64\n",
+      "100\n",
+      "144\n",
+      "196\n",
+      "256\n",
+      "324\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 2\n",
+    "while i < 21:\n",
+    "    print(i**2)\n",
+    "    i = i + 2\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [range(1, 101)]:\n",
+    "    print(sum(i))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,10 +228,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'range' and 'range'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[44], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m)]:\n\u001b[1;32m      2\u001b[0m    \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m)]:\n\u001b[0;32m----> 3\u001b[0m       \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m*\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mi\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mj\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m    \u001b[38;5;28mprint\u001b[39m()   \n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'range' and 'range'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in [range(1, 11)]:\n",
+    "   for j in [range(1, 11)]:\n",
+    "      print(f\"{i}*{j} = {i * j}\", end='')\n",
+    "   print()   \n",
+    "\n",
+    "    \n",
+    "  ?????\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +282,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "??"
+   ]
   }
  ],
  "metadata": {
