--- a/task1.4.ipynb
+++ b/task1.4.ipynb
@@ -38,27 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 5\n",
     "while i < 16:\n",
@@ -90,46 +72,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n",
-      "100\n",
-      "121\n",
-      "144\n",
-      "169\n",
-      "196\n",
-      "225\n",
-      "256\n",
-      "289\n",
-      "324\n",
-      "361\n",
-      "400\n"
+      "1 -> 1\n",
+      "2 -> 4\n",
+      "3 -> 9\n",
+      "4 -> 16\n",
+      "5 -> 25\n",
+      "6 -> 36\n",
+      "7 -> 49\n",
+      "8 -> 64\n",
+      "9 -> 81\n",
+      "10 -> 100\n",
+      "11 -> 121\n",
+      "12 -> 144\n",
+      "13 -> 169\n",
+      "14 -> 196\n",
+      "15 -> 225\n",
+      "16 -> 256\n",
+      "17 -> 289\n",
+      "18 -> 324\n",
+      "19 -> 361\n",
+      "20 -> 400\n"
      ]
     }
    ],
    "source": [
     "i = 1\n",
     "while i < 21:\n",
-    "    print(i**2)\n",
+    "    print(str(i) + ' -> ' + str(i**2))\n",
     "    i = i + 1\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "??\n",
     "\n",
     " "
    ]
@@ -143,30 +124,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "16\n",
-      "36\n",
-      "64\n",
-      "100\n",
-      "144\n",
-      "196\n",
-      "256\n",
-      "324\n",
-      "400\n"
+      "2 -> 4\n",
+      "4 -> 16\n",
+      "6 -> 36\n",
+      "8 -> 64\n",
+      "10 -> 100\n",
+      "12 -> 144\n",
+      "14 -> 196\n",
+      "16 -> 256\n",
+      "18 -> 324\n",
+      "20 -> 400\n"
      ]
     }
    ],
    "source": [
     "i = 2\n",
     "while i < 21:\n",
-    "    print(i**2)\n",
+    "    print(str(i) + ' -> ' + str(i**2))\n",
     "    i = i + 2\n",
     "\n"
    ]
@@ -194,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,30 +209,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'range' and 'range'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m)]:\n\u001b[1;32m      2\u001b[0m    \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m)]:\n\u001b[0;32m----> 3\u001b[0m       \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m*\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mi\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43mj\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m    \u001b[38;5;28mprint\u001b[39m()   \n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'range' and 'range'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "2 4 6 8 10 12 14 16 18 20 \n",
+      "3 6 9 12 15 18 21 24 27 30 \n",
+      "4 8 12 16 20 24 28 32 36 40 \n",
+      "5 10 15 20 25 30 35 40 45 50 \n",
+      "6 12 18 24 30 36 42 48 54 60 \n",
+      "7 14 21 28 35 42 49 56 63 70 \n",
+      "8 16 24 32 40 48 56 64 72 80 \n",
+      "9 18 27 36 45 54 63 72 81 90 \n",
+      "10 20 30 40 50 60 70 80 90 100 \n"
      ]
     }
    ],
    "source": [
     "\n",
-    "for i in [range(1, 11)]:\n",
-    "   for j in [range(1, 11)]:\n",
-    "      print(f\"{i}*{j} = {i * j}\", end='')\n",
-    "   print()   \n",
+    "for i in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:\n",
+    "   for j in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:\n",
+    "      print(str(i * j),'', end='')\n",
+    "   print()\n",
     "\n",
     "    \n",
-    "  ?????\n"
+    "\n"
    ]
   },
   {
@@ -279,11 +265,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 02 03 04 05 06 07 08 09 10 \n",
+      "02 04 06 08 10 12 14 16 18 20 \n",
+      "03 06 09 12 15 18 21 24 27 30 \n",
+      "04 08 12 16 20 24 28 32 36 40 \n",
+      "05 10 15 20 25 30 35 40 45 50 \n",
+      "06 12 18 24 30 36 42 48 54 60 \n",
+      "07 14 21 28 35 42 49 56 63 70 \n",
+      "08 16 24 32 40 48 56 64 72 80 \n",
+      "09 18 27 36 45 54 63 72 81 90 \n",
+      "10 20 30 40 50 60 70 80 90 100 \n"
+     ]
+    }
+   ],
    "source": [
-    "??"
+    "for i in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:\n",
+    "   for j in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:\n",
+    "      if i*j >= 10:\n",
+    "         print(str(i * j),'', end='')\n",
+    "      else:\n",
+    "         print('0'+str(i * j)+' ', end='')\n",
+    "   print()"
    ]
   }
  ],
