--- a/task4.ipynb
+++ b/task4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ffa825a6750>"
+       "<matplotlib.image.AxesImage at 0x7f503d07b110>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7ffa82251110>"
+       "<matplotlib.colorbar.Colorbar at 0x7f503c436690>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7ffa82317850>"
+       "<matplotlib.colorbar.Colorbar at 0x7f503c4c7b10>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m lena_correct_h \u001b[38;5;241m=\u001b[39m skimage\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/lena_prewitt_h.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m lena_correct_v \u001b[38;5;241m=\u001b[39m skimage\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/lena_prewitt_v.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39mallclose(prewitt_h(img\u001b[38;5;241m.\u001b[39mcopy(), \u001b[38;5;241m3\u001b[39m), lena_correct_h, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m255\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39mallclose(prewitt_v(img\u001b[38;5;241m.\u001b[39mcopy(), \u001b[38;5;241m3\u001b[39m), lena_correct_v, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m255\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[8], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m lena_correct_h \u001b[38;5;241m=\u001b[39m skimage\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/lena_prewitt_h.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m lena_correct_v \u001b[38;5;241m=\u001b[39m skimage\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/lena_prewitt_v.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39mallclose(prewitt_h(img\u001b[38;5;241m.\u001b[39mcopy(), \u001b[38;5;241m3\u001b[39m), lena_correct_h, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m255\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m numpy\u001b[38;5;241m.\u001b[39mallclose(prewitt_v(img\u001b[38;5;241m.\u001b[39mcopy(), \u001b[38;5;241m3\u001b[39m), lena_correct_v, atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m255\u001b[39m)\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -216,7 +216,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gradient(img, size):\n",
+    "    edgex = numpy.zeros(img.shape)\n",
+    "    edgey = numpy.zeros(img.shape)\n",
+    "    result = numpy.zeros(img.shape)\n",
+    "    n = (size - 1) // 2\n",
+    "    mx = numpy.array([[1, 0, -1],[1, 0, -1],[1, 0, -1]], numpy.int32)\n",
+    "    my = numpy.array([[-1, -1, -1],[0, 0, 0],[1, 1, 1]], numpy.int32)\n",
+    "    for p in numpy.ndindex(img.shape[1]-2*n, img.shape[0]-2*n):\n",
+    "        abcx = 0\n",
+    "        abcy = 0\n",
+    "        for q in numpy.ndindex(size, size):\n",
+    "            pos = tuple(map(lambda x, y: x + y, p, q))\n",
+    "            abcx += img[pos] * mx[q]\n",
+    "            abcy += img[pos] * my[q]\n",
+    "            edgex[p[0]+n,p[1]+n] = abcx/(size*2)\n",
+    "            edgey[p[0]+n,p[1]+n] = abcy/(size*2)\n",
+    "    result = numpy.sqrt(edgex**2+edgey**2)\n",
+    "    return result        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +246,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "lena_correct_gradmag = skimage.io.imread('data/lena_prewitt_gradmag.tiff')\n",
+    "\n",
+    "assert numpy.allclose(gradient(img.copy(), 3), lena_correct_gradmag, atol=1/255)"
+   ]
   },
   {
    "cell_type": "markdown",
